# yad

./: Cargo.toml  README.md  README.tpl
examples/: flows.rs  heartbeat.rs  simple.rs
src/: .lib.rs.rustfmt  lib.rs  options.rs
tests/: daemonize.rs  daemonize_run.rs  tests.rs
yad-derive/: Cargo.toml
yad-derive/src/: lib.rs
