[package]
name = "yad"
version = "0.2.1"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["daemon", "process", "unix"]
repository = "https://github.com/m-lima/yad"
categories = ["os", "os::unix-apis", "os::macos-apis", "os::linux-apis", "os::freebsd-apis"]
description = "Yet Another Daemonizer is a daemonizing crate to easily, simply, and correctly create legacy daemons"
license = "MIT"

[[test]]
name = "daemonize"
path = "tests/daemonize.rs"
harness = false

[dependencies]
nix = "0.25.0"
thiserror = "1.0.37"

[dev-dependencies]
pwner = "0.1.8"
